--- a/config/config.json
+++ b/config/config.json
@@ -40,10 +40,17 @@
       ]
     },
     "mainMenu":{
-      "initial": "",
+      "initial": "newGame",
       "states": ["newGame", "continueGame", "optionsGame", "exitGame"],
       "conections": [
-        "::"
+        "newGame:continueGame:key_DOWN",
+        "continueGame:newGame:key_UP",
+        "continueGame:optionsGame:key_DOWN",
+        "optionsGame:continueGame:key_UP",
+        "optionsGame:exitGame:key_DOWN",
+        "exitGame:optionsGame:key_UP",
+        "exitGame:newGame:key_DOWN",
+        "newGame:exitGame:key_UP"
       ]
     }
   }
