--- a/config/config.json
+++ b/config/config.json
@@ -6,6 +6,12 @@
   "LAN": "ESP",
   "FPS": 32,
   "intro_duration": 1500,
+  "env": "dev",
+  "logging": {
+    "enabled": true,
+    "level": "DEBUG",
+    "file": "logs/game.log"
+  },
   "playerName": "Human",
   "playerAge": 0,
   "playerVelocity": 5,
