--- a/config/config.json
+++ b/config/config.json
@@ -7,7 +7,7 @@
   "FPS": 32,
   "intro_duration": 1500,
   "env": "dev",
-  "logging": false,
+  "logging": true,
   "playerName": "Human",
   "playerAge": 0,
   "playerVelocity": 5,
