--- a/config/config.json
+++ b/config/config.json
@@ -58,5 +58,16 @@
         "exitGame:optionsGame:controls:key_UP"
       ]
     }
+  },
+  "statistics":{
+    "time": 0,  
+    "energy": 50,
+    "hunger": 50,
+    "intelligence": 90,
+    "strength": 50,
+    "mental_health": 100,
+    "physical_health": 100,
+    "social_skills": 50,
+    "job_performance": 20
   }
 }
