--- a/config/config.json
+++ b/config/config.json
@@ -9,8 +9,11 @@
   "env": "dev",
   "logging": true,
   "playerName": "Human",
+  "playerGender":  "Male",
   "playerAge": 0,
   "playerVelocity": 5,
+  "playerSpecies": "Human",
+  "playerLevel": 1,
   "player_look_up": "player_look_up.png",
   "player_look_left": "player_look_left.png",
   "player_look_right": "player_look_right.png",
