LORE, PLAYER, CONFIG

--- a/config/config.json
+++ b/config/config.json
@@ -8,12 +8,15 @@
   "intro_duration": 200,
   "env": "dev",
   "logging": true,
-  "playerName": "Human",
+  "playerName": "Felipe",
   "playerGender":  "Male",
   "playerAge": 0,
   "playerVelocity": 5,
   "playerSpecies": "Human",
   "playerLevel": 1,
+  "playerHP": 100,
+  "playerMaxHP": 100,
+  "LCS": 0,
   "player_look_up": "player_look_up.png",
   "player_look_left": "player_look_left.png",
   "player_look_right": "player_look_right.png",
