Display Pause:Player:Name

--- a/config/config.json
+++ b/config/config.json
@@ -8,7 +8,11 @@
   "intro_duration": 200,
   "env": "dev",
   "logging": true,
-  "playerName": "Felipe",
+  "playerNickname": "MOLOTOV",
+  "playerFirstName": "Andrés",
+  "playerSecondName": "Felipe",
+  "playerFamilyName": "Hernández",
+  "playerSecondFamilyName": "",
   "playerGender":  "Male",
   "playerAge": 0,
   "playerVelocity": 5,
