--- a/config/config.json
+++ b/config/config.json
@@ -5,7 +5,8 @@
   "floorH": 48,
   "LAN": "ESP",
   "FPS": 120,
-  "intro_duration": 200,
+  "intro_duration": 100,
+  "advisory_duration": 200,
   "env": "dev",
   "logging": true,
   "playerNickname": "MOLOTOV",
@@ -42,9 +43,10 @@
   "statesMachines": {
     "game": {
       "initial": "intro",
-      "states": ["intro", "mainMenu", "gameStart", "gamePause", "gameOptions"],
+      "states": ["intro", "advisory", "mainMenu", "gameStart", "gamePause", "gameOptions"],
       "conections": [
-        "intro:mainMenu:symbol:t",
+        "intro:advisory:symbol:a",
+        "advisory:mainMenu:symbol:t",
         "mainMenu:gameStart:symbol:gameStart",
         "mainMenu:gameOptions:symbol:gameOptions",
         "gameStart:gameStart:controls:direction_buttons", 
