ADD PLAYER BIRTH DATE

--- a/config/config.json
+++ b/config/config.json
@@ -19,6 +19,9 @@
   "playerAge": 0,
   "playerSpecies": "Human",
   "playerLevel": 1,
+  "playerBirthDateDD": 13,
+  "playerBirthDateMM": 2,
+  "playerBirthDateYYYY": 1991,
   "playerHP": 80,
   "playerMaxHP": 100,
   "LCS": 0,
