--- a/config/config.json
+++ b/config/config.json
@@ -9,6 +9,10 @@
   "advisory_duration": 300,
   "env": "dev",
   "logging": true,
+  "sprite_fps": 8,
+  "sprite_frames": 8,
+  "sprite_width": 50,
+  "sprite_height": 100,
   "playerNickname": "MOLOTOV",
   "playerFirstName": "Andrés",
   "playerSecondName": "Felipe",
