--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.2.0",
+  "version": "1.3.0",
   "displayW": 640,
   "displayH": 480,
   "floorW": 84,
@@ -21,7 +21,7 @@
   "playerFamilyName": "Hernández",
   "playerSecondFamilyName": "",
   "playerGender":  "Male",
-  "playerLocation": "white",
+  "playerLocation": "void",
   "playerAge": 0,
   "playerSpecies": "Human",
   "playerLevel": 1,
